Better exception handling in the controller
